Completed Stretch Goal for adding fixed NavBar

--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,8 @@ p {
   height: 15vh;
   background-color: #F6F6F6;
   border: 1px double #F1F1F1;
+  position: fixed;
+  width: 100%;
 }
 .nav-class h1 {
   font-size: 3.2rem;
@@ -204,6 +206,12 @@ footer {
 }
 .home .intro .header-img {
   width: 100%;
+  margin-top: 15%;
+}
+@media (max-width: 500px) {
+  .home .intro .header-img {
+    margin-top: 22%;
+  }
 }
 .home .intro h2 {
   padding: 15px;
