--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,10 @@
 
     .header-img {
       width: 100%;
+      margin-top: 15%;
+      @media @phone {
+        margin-top: 22%;
+      }
     }
 
     h2 {
