--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,6 +8,8 @@
     height: 15vh;
     background-color: @nav-bg;
     border: 1px double @nav-border;
+    position: fixed;
+    width: 100%;
         h1 {
             font-size: 3.2rem;
             font-family: @nav-font;
